src/components/ClassCard/ClassCard.css
#ClassCardHeader{
   color: #727272;
   padding: 8px;
   float: left;
}

.classDetail{
   padding: 8px;
   margin:8px;
   margin-top: 12px;
   display: flex;
}

.classCard{
   width: 300px;
   margin: 20px;
}

#classCardTitle{
   margin: auto;
   width: 50%;
   padding: 10px;
   margin:2px
}

